
@startuml

skinparam backgroundColor #FEFEFE
skinparam wrapWidth 600
package "DMA_FiltersView_API" #DDDDDD
{

class "CFiltersView"
{
}

class "CFiltersViewComponent"
{
}

class "IFiltersModel"
{
    + {abstract} virtual void addCompletionData( const tFoundMatches& foundMatches ) = 0
    + {abstract} virtual void filterRegexTokens( const QString& filter ) = 0
    + {abstract} virtual void resetCompletionData() = 0
    + {abstract} virtual void resetData() = 0
    + {abstract} virtual void setUsedRegex(const QString& regexStr) = 0
}

}

package "DMA_Framework_Component" #DDDDDD
{

class "DMA::IComponent"
{
}

}

package "DMA_Settings_API" #DDDDDD
{

class "CSettingsManagerClient"
{
}

}

package "Qt" #DDDDDD
{

abstract class "QAbstractItemModel"
{
}

class "QTreeView"
{
}

}

'====================Inheritance section====================
CSettingsManagerClient <|-- CFiltersView : extends
QTreeView <|-- CFiltersView : implements
CSettingsManagerClient <|-- CFiltersViewComponent : extends
DMA::IComponent <|-- CFiltersViewComponent : implements
QAbstractItemModel <|-- IFiltersModel : implements

'====================Dependencies section====================
CFiltersViewComponent "1" o-- "1" CFiltersView : uses
CFiltersViewComponent "1" *-- "1" IFiltersModel : contains

@enduml